updated yaml and README

--- a/eat.yaml
+++ b/eat.yaml
@@ -19,6 +19,7 @@ dependencies:
   - statsmodels
   - opencv
   - scikit-learn
+  - gagphil1::tkinterdnd2
   - pip:
     - changepy
     - scikit-posthocs
